fix install command in ViconDataStreamSDK_CPP/CMakeLists.txt

--- a/DataStream/ViconDataStreamSDK_CPP/CMakeLists.txt
+++ b/DataStream/ViconDataStreamSDK_CPP/CMakeLists.txt
@@ -17,7 +17,10 @@ set_target_properties(ViconDataStreamSDK_CPP PROPERTIES
 	POSITION_INDEPENDENT_CODE ON
 )
 
-install(TARGETS ViconDataStreamSDK_CPP)
+install(TARGETS ViconDataStreamSDK_CPP 
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION lib
+)
 
 install(
 	FILES
